@@ -15,6 +15,8 @@
 ~ @FieldConstraints constraint now also considers constraints added to fields during runtime via Validator.addCheck(...)
 ~ changed all static methods of Validator and ConstraintsEnforcer to non-static to allow multiple validator instances at the same time being configured differently
 + introduced an ignoreIfNull parameter for the @ValidateWithMethod annotation
+* net.sf.oval.annotations.PreValidateThis: annotation @PreValidateObject renamed to @PreValidateThis
+* net.sf.oval.annotations.PostValidateThis: annotation @PostValidateObject renamed to @PostValidateThis
 
 Refactoring:
 - removed net.sf.oval.Validator.setAnnotationCheckLoader(AnnotationCheckLoader)
